2018-08-29 at company SharedPreference를 사용하여 등록 라벨 저장 및 인식 로직 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="verification_fail">인식에 실패 하였습니다!</string>
     <string name="ball_background_image_des">ball_background</string>
     <string name="ball_background_grid_image_des">ball_background_grid</string>
+    <string name="not_enrolled_user">등록된 유저가 없습니다</string>
+    <string name="delete_enrolled_data">등록 데이터 삭제</string>
 </resources>
