2018-08-29 at company Bitmap 전송 로직 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="ball_background_grid_image_des">ball_background_grid</string>
     <string name="not_enrolled_user">등록된 유저가 없습니다</string>
     <string name="delete_enrolled_data">등록 데이터 삭제</string>
+    <string name="success_enroll">등록 성공</string>
 </resources>
